# sake_request

./: .copier-answers.yml  .coverage-tmp.html  .gitlab-ci.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  duties.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/ISSUE_TEMPLATE/: 1-bug.md
.github/workflows/: ci.yaml  ci.yml  docs.yml
changelog/: index.html
code_of_conduct/: index.html
config/: coverage.ini  ruff.toml
contributing/: index.html
coverage/: class_index.html  covindex.html  function_index.html  index.html  status.json  z_794f8188dd3fd738_obj_py.html  z_794f8188dd3fd738_utils_py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_obj_py.html  z_a44f0ac069e85531_test_utils_py.html  z_d319a2b22dfd451a_abc_py.html  z_d319a2b22dfd451a_dataclasses_py.html  z_d319a2b22dfd451a_obj_py.html  z_d319a2b22dfd451a_utils_py.html
credits/: index.html
docs/: usage.md
docs/.overrides/partials/: comments.html
docs/reference/: api.md
license/: index.html
reference/SUMMARY/: index.html
reference/api/: index.html
reference/sake/: index.html
reference/sake/abc/: index.html
reference/sake/dataclasses/: index.html
reference/sake/duckdb_query/: index.html
reference/sake/utils/: index.html
reference/variantplaner/: index.html
reference/variantplaner/abc/: index.html
reference/variantplaner/dataclasses/: index.html
reference/variantplaner/utils/: index.html
scripts/: gen_credits.py  make.py
search/: search_index.json
src/sake/: __init__.py  _utils.py  abc.py  dataclasses.py  duckdb_query.py  obj.py  utils.py
src/variantplaner/: __init__.py  dataclasses.py  obj.py  utils.py
tests/: __init__.py  test__utils.py  test_cli.py  test_obj.py  test_utils.py
tests/data/annotations/snpeff/4.3t/germline/: 1.parquet  10.parquet  11.parquet  12.parquet  13.parquet  14.parquet  15.parquet  16.parquet  17.parquet  18.parquet  19.parquet  2.parquet  20.parquet  21.parquet  22.parquet  3.parquet  4.parquet  5.parquet  6.parquet  7.parquet  8.parquet  9.parquet  X.parquet  Y.parquet
tests/data/germline/: variants.parquet
tests/data/germline/cnv/samples/31E5EE/: wisecondor.parquet
tests/data/germline/genotypes/partitions/id_part=0/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=1/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=10/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=100/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=101/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=102/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=103/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=104/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=105/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=106/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=107/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=108/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=109/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=11/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=110/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=111/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=112/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=113/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=114/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=115/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=116/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=117/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=118/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=119/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=12/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=120/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=121/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=122/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=123/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=125/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=126/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=127/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=128/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=129/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=13/: 0.parquet
tests/data/germline/genotypes/partitions/id_part=132/: 0.parquet
tests/data/germline/genotypes/samples/: AAAA.parquet  BBBB.parquet  CCCC.parquet  DDDD.parquet  EEEE.parquet  FFFF.parquet
tests/data/germline/genotypes/transmissions/: AAAA.parquet  BBBB.parquet  CCCC.parquet  DDDD.parquet  EEEE.parquet  FFFF.parquet
tests/data/germline/variants/: 1.parquet  10.parquet  11.parquet  12.parquet  13.parquet  14.parquet  15.parquet  16.parquet  17.parquet  18.parquet  19.parquet  2.parquet  20.parquet  21.parquet  22.parquet  3.parquet  4.parquet  5.parquet  6.parquet  7.parquet  8.parquet  9.parquet  X.parquet  Y.parquet
tests/data/samples/: patients.json  patients.parquet
usage/: index.html
(+144 files in other folders)
