[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "sake"
description = "A set of utils tools to interogate Seqoia dAta laKE"
authors = [{name = "Pierre Marijon", email = "pierre.marijon-ext@aphp.fr"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
	     "duckdb>=1",
	     "polars[pyarrow]>=1",
	     "tqdm>=4",
]

[project.urls]
Homepage = "https://seqoia-it.github.io/sake_request"
Documentation = "https://seqoia-it.github.io/sake_request"
Changelog = "https://seqoia-it.github.io/sake_request/changelog"
Repository = "https://github.com/SeqOIA-IT/sake_request"
Issues = "https://github.com/SeqOIA-IT/sake_request/issues"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]

[tool.uv]
dev-dependencies = [
    # dev
    "editables>=0.5",

    # maintenance
    "build>=1",
    "git-changelog>=2",
    "twine>=6",

    # ci
    "duty>=1",
    "ruff>=0.9",
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-randomly>=3",
    "pytest-xdist>=3",
    "mypy>=1",
    "types-markdown>=3",
    "types-pyyaml>=6",

    # docs
    "markdown-callouts>=0.4",
    "markdown-exec>=1",
    "mkdocs>=1",
    "mkdocs-coverage>=1",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-revision-date-localized-plugin>=1",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.27",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2; python_version < '3.11'",
]
